@@ -1,3 +1,12 @@
+2009-07-21  Paul Pluzhnikov  <ppluzhnikov@google.com>
+	
+	* objfiles.c (objfiles_updated_p): New variable.
+	(qsort_cmp, bsearch_cmp, update_section_map): New function.
+	(find_pc_section): Use bsearch.
+	(set_objfiles_updated_on_exe_change): New function.
+	(set_objfiles_updated_on_solib_activity): New function.
+	(_initialize_objfiles): New function.
+	
 2009-06-26 Michael Eager <eager@eagercon.com>
 
 	* features/rs6000/powerpc-405.xml: New.
